--- a/env/includes/app_locations.yml
+++ b/env/includes/app_locations.yml
@@ -32,6 +32,11 @@ apps.tk-multi-breakdown2.location:
   type: app_store
   name: tk-multi-breakdown2
   version: v0.2.3
+apps.tk-multi-data-validation.location:
+  type: git_branch
+  path: https://github.com/shotgunsoftware/tk-multi-data-validation.git
+  branch: main
+  version: c612284
 apps.tk-multi-demo.location:
   type: app_store
   name: tk-multi-demo
