--- a/env/includes/engine_locations.yml
+++ b/env/includes/engine_locations.yml
@@ -27,9 +27,10 @@ engines.tk-aftereffects.location:
   name: tk-aftereffects
   version: v0.3.1
 engines.tk-alias.location:
-  type: app_store
-  name: tk-alias
-  version: v2.1.2
+  type: git_branch
+  path: https://github.com/shotgunsoftware/tk-alias.git
+  branch: SHOT-3781-scene-validation
+  version: 5c1419a
 engines.tk-desktop.location:
   type: app_store
   name: tk-desktop
