--- a/env/includes/frameworks.yml
+++ b/env/includes/frameworks.yml
@@ -37,9 +37,10 @@ frameworks:
       name: tk-framework-desktopserver
   tk-framework-qtwidgets_v2.x.x:
     location:
-      version: v2.10.2
-      type: app_store
-      name: tk-framework-qtwidgets
+      type: git_branch
+      path: https://github.com/shotgunsoftware/tk-framework-qtwidgets.git
+      branch: bugfix/action-button-state
+      version: d8c8040
   tk-framework-shotgunutils_v4.x.x:
     location:
       version: v4.4.15
