--- a/env/includes/engine_locations.yml
+++ b/env/includes/engine_locations.yml
@@ -27,9 +27,11 @@ engines.tk-aftereffects.location:
   name: tk-aftereffects
   version: v0.3.1
 engines.tk-alias.location:
-  type: app_store
+  type: dev
   name: tk-alias
   version: v2.1.2
+  windows_path: Z:\shotgun\venvs/SHOT-3781-scene-validation/tk/tk-alias
+  mac_path: /opt/shotgun/venvs/SHOT-3781-scene-validation/tk/tk-alias
 engines.tk-desktop.location:
   type: app_store
   name: tk-desktop
