--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -489,26 +489,8 @@ settings.tk-multi-publish2.alias.asset_step:
   collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
   collector_settings:
       Work Template: alias_asset_work
+  # pre_publish: "{engine}/tk-multi-publish2/basic/pre_publish.py"
   publish_plugins:
-   - name: Scene Validation & Cleanup 
-     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_scene_validation.py"
-     settings:
-      Validation:
-        - key: unused_shaders
-          auto: True
-        - key: null_nodes
-          required: False
-          checked: False
-        - key: empty_layers
-          required: False
-        - key: unused_cos
-          required: False
-        - key: locators
-          required: False
-        - key: construction_history
-          required: False
-        - key: metadata
-          required: False
    - name: Publish to ShotGrid
      hook: "{self}/publish_file.py"
      settings: {}
@@ -536,7 +518,25 @@ settings.tk-multi-publish2.alias.asset_step:
    - name: Publish Annotations to ShotGrid
      hook: "{engine}/tk-multi-publish2/basic/publish_annotations.py"
      settings: {}
-  pre_publish: "{engine}/tk-multi-publish2/basic/pre_publish.py"
+   - name: Publish Clean Version to ShotGrid
+     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_validated_scene.py"
+     settings:
+       rules:
+        - key: unused_shaders
+          auto: True
+        - key: null_nodes
+          required: False
+          checked: False
+        - key: empty_layers
+          required: False
+        # - key: unused_cos
+          # required: False
+        # - key: locators
+          # required: False
+        # - key: construction_history
+          # required: False
+        # - key: metadata
+          # required: False
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
 
