--- a/core/roots.yml
+++ b/core/roots.yml
@@ -42,18 +42,25 @@
 # ------------------------------------------------------------------------------
 
 primary:
+  default: true
+  linux_path: null
+  mac_path: null
+  shotgun_storage_id: 3
+  windows_path: X:\
 
-    description: A top-level root folder for production data. Project folders
-        will be created beneath this location.
+# primary:
 
-    # these paths will be populated by the associated local storage in Shotgun
-    # at setup time.
-    mac_path:
-    linux_path:
-    windows_path:
+#     description: A top-level root folder for production data. Project folders
+#         will be created beneath this location.
 
-    # indicates that this is the default storage root
-    default: true
+#     # these paths will be populated by the associated local storage in Shotgun
+#     # at setup time.
+#     mac_path:
+#     linux_path:
+#     windows_path:
+
+#     # indicates that this is the default storage root
+#     default: true
 
 # ------------------------------------------------------------------------------
 # Below is an example of a second storage root. This root would require a local
