--- a/env/includes/frameworks.yml
+++ b/env/includes/frameworks.yml
@@ -37,9 +37,12 @@ frameworks:
       name: tk-framework-desktopserver
   tk-framework-qtwidgets_v2.x.x:
     location:
-      version: v2.10.2
-      type: app_store
-      name: tk-framework-qtwidgets
+      # version: v2.10.2
+      # type: app_store
+      # name: tk-framework-qtwidgets
+      type: dev
+      windows_path: Z:\shotgun\venvs/SHOT-3781-scene-validation/tk/tk-framework-qtwidgets
+      mac_path: opt/shotgun/venvs/SHOT-3781-scene-validatoin/tk/tk-framework-qtwidgets
   tk-framework-shotgunutils_v4.x.x:
     location:
       version: v4.4.15
