--- a/env/includes/settings/tk-multi-data-validation.yml
+++ b/env/includes/settings/tk-multi-data-validation.yml
@@ -21,27 +21,34 @@ includes:
 settings.tk-multi-data-validation.alias.asset_step:
   hook_scene_validator: "{engine}/tk-multi-data-validation/basic/scene_validator.py"
   rules:
-    - key: unused_shaders
+    - key: shader_unused
       auto: True
-    - key: null_nodes
+    - key: node_is_null
       required: True
       checked: False
-    - key: empty_layers
+    - key: layer_is_empty
       required: True
-    - key: construction_history
+    - key: node_has_construction_history
       required: True
-    - key: unused_cos
+    - key: cos_unused
       required: True
     - key: locators
       required: True
-    - key: instances
-    - key: pivots
-    - key: zero_transform
+    - key: node_instances
+    - key: node_pivots_at_origin
+    - key: node_has_zero_transform
+    - key: layer_has_single_shader
+    - key: shader_is_vred_compatible
+    - key: references_exist
+    - key: layer_symmetry_moderate
+    - key: layer_symmetry_strict
+    - key: layer_nodes
+    - key: layer_has_single_item
+    - key: group_has_single_level_hierarchy
+    - key: layer_name_matches_assigned_nodes
+    - key: node_is_not_in_default_layer
+    - key: node_is_in_default_layer
     - key: metadata
-      manual: True
-    - key: vred_shaders
-      manual: True
-    - key: layer_shaders
       manual: True
   Work Template: alias_asset_work
   Staging Template: alias_asset_staging
